@@ -16,7 +16,7 @@ tatami::NumericMatrix* store_sparse_matrix(XVector_ x, Rcpp::IntegerVector i, Rc
 }
 
 //[[Rcpp::export(rng=false)]]
-SEXP initialize_sparse_matrix(Rcpp::RObject raw_x, Rcpp::RObject raw_i, Rcpp::RObject raw_p, int nrow, int ncol, bool byrow) {
+SEXP initialize_sparse_matrix(Rcpp::RObject raw_x, Rcpp::RObject raw_i, Rcpp::RObject raw_p, int nrow, int ncol, bool byrow, bool check_na) {
     auto output = Rtatami::new_BoundNumericMatrix();
     Rcpp::List store(3);
 
@@ -36,7 +36,7 @@ SEXP initialize_sparse_matrix(Rcpp::RObject raw_x, Rcpp::RObject raw_i, Rcpp::RO
         Rcpp::LogicalVector x(raw_x);
         store[2] = x;
         output->ptr.reset(store_sparse_matrix<int>(std::move(x), std::move(i), std::move(p), nrow, ncol, byrow));
-        if (has_na_logical(x)) {
+        if (check_na && has_na_logical(x)) {
             auto masked = delayed_cast_na_logical(std::move(output->ptr)); 
             output->ptr = std::move(masked);
         }
@@ -55,7 +55,7 @@ SEXP initialize_sparse_matrix(Rcpp::RObject raw_x, Rcpp::RObject raw_i, Rcpp::RO
 }
 
 //[[Rcpp::export(rng=false)]]
-SEXP initialize_SVT_SparseMatrix(int nr, int nc, Rcpp::RObject seed) {
+SEXP initialize_SVT_SparseMatrix(int nr, int nc, Rcpp::RObject seed, bool check_na) {
     auto output = Rtatami::new_BoundNumericMatrix();
 
     std::vector<tatami::ArrayView<int> > indices(nc, tatami::ArrayView<int>(NULL, 0));
@@ -110,18 +110,21 @@ SEXP initialize_SVT_SparseMatrix(int nr, int nc, Rcpp::RObject seed) {
 
             if constexpr(is_int) {
                 values_i[c] = tatami::ArrayView<int>(static_cast<const int*>(curvalues.begin()), curvalues.size());
-                if (curvalues.sexp_type() == INTSXP) {
-                    if (!needs_na_cast && has_na_integer(curvalues)) {
-                        needs_na_cast = true;
-                    }
-                } else {
-                    if (!needs_na_cast && has_na_logical(curvalues)) {
-                        needs_na_cast = true;
+                if (check_na && !needs_na_cast) {
+                    if (curvalues.sexp_type() == INTSXP) {
+                        if (has_na_integer(curvalues)) {
+                            needs_na_cast = true;
+                        }
+                    } else {
+                        if (has_na_logical(curvalues)) {
+                            needs_na_cast = true;
+                        }
                     }
                 }
             } else {
                 values_d[c] = tatami::ArrayView<double>(static_cast<const double*>(curvalues.begin()), curvalues.size());
             }
+
             store_v[c] = curvalues;
         }
     });
@@ -130,13 +133,11 @@ SEXP initialize_SVT_SparseMatrix(int nr, int nc, Rcpp::RObject seed) {
         output->ptr.reset(new tatami::FragmentedSparseColumnMatrix<double, int, decltype(values_d), decltype(indices)>(nr, nc, std::move(values_d), std::move(indices), false));
     } else {
         output->ptr.reset(new tatami::FragmentedSparseColumnMatrix<double, int, decltype(values_i), decltype(indices)>(nr, nc, std::move(values_i), std::move(indices), false));
-        if (type == "integer") {
-            if (needs_na_cast) {
+        if (check_na && needs_na_cast) {
+            if (type == "integer") {
                 auto masked = delayed_cast_na_integer(std::move(output->ptr)); 
                 output->ptr = std::move(masked);
-            }
-        } else if (type == "logical") {
-            if (needs_na_cast) {
+            } else {
                 auto masked = delayed_cast_na_logical(std::move(output->ptr)); 
                 output->ptr = std::move(masked);
             }
