@@ -4,6 +4,7 @@
 
 \section{Version 2.24.0}{\itemize{
 \item Automatically cast integer/logical NAs to their double equivalents in the matrices wrapped by \code{initializeCpp()}.
+This can be disabled by setting \code{.check.na=FALSE}.
 }}
 
 \section{Version 2.22.0}{\itemize{
